# wsf0th-jp

./: README.md  pyproject.toml
valentino/: results.txt
valentino/valentino/: items.py  middlewares.py  pipelines.py  settings.py
valentino/valentino/spiders/: ecomscraper.py
